MAN JPMS + KOTLIN KIND OF SUCKS
WIP -- this is a smashing of multiple trial and error attempts at
making progress with modularizing Kotter. This would need to be
heavily cleaned up before actually being sumbitted for real.